--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^4.3.1",
     "react-toastify": "^5.5.0",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
